# chatwoot-telegram-userbot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
src/: main.py
src/chatwoot/: client.py  webhook.py
src/core/: config.py  database.py  models.py  router.py
src/telegram/: catchup.py  client.py  handlers.py
tests/: conftest.py  test_catchup.py  test_chatwoot_client.py  test_database.py  test_router.py  test_webhook.py
